Colaboratory を使用して作成しました

--- a/rust01.ipynb
+++ b/rust01.ipynb
@@ -6,7 +6,7 @@
       "name": "rust01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP7EOFVeKqE5ogQ4mQtYum9",
+      "authorship_tag": "ABX9TyOoDb/xmA7G+b+piBEA7qF3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,8 +60,17 @@
         "%%capture\n",
         "!apt install rustc --fix-missing"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "af0DOi07quSW"
+      },
+      "source": [
+        "%%capture はアウトプットを抑制して出さなくする。 出力なしにする。"
+      ]
     },
     {
       "cell_type": "code",
@@ -124,7 +133,7 @@
         "    println!(\"Hello, world!\");\n",
         "}"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,7 +157,7 @@
         "# コンパイル&ラン(実行)\n",
         "!cargo run"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -352,7 +361,7 @@
         "name = \"content\"\n",
         "path = \"main.rs\""
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -403,7 +412,7 @@
         "    println!(\"{} => {:?}\", args.pattern, args.path)\n",
         "}"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -489,7 +498,7 @@
       "source": [
         "!cargo run -- some-pattern some-file"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -545,7 +554,7 @@
         "    }\n",
         "}"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -568,7 +577,7 @@
       "source": [
         "!cargo run -- main main.rs"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -599,16 +608,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "Sq2Fpo-bex3Y",
-        "outputId": "59ab3e36-5ae4-4b52-ce20-e8d45f1b6b21",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "59ab3e36-5ae4-4b52-ce20-e8d45f1b6b21"
       },
       "source": [
         "# 実験 path が読めないときのエラー\n",
         "! cargo run -- main foobar"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
