--- a/lisp01.ipynb
+++ b/lisp01.ipynb
@@ -6,7 +6,7 @@
       "name": "lisp01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMXrgoFjXNfvfSeZn4qrINF",
+      "authorship_tag": "ABX9TyP0/stXjYBBdKcr0J7dFqr8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,6 +56,15 @@
       ],
       "execution_count": 16,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4GArhfBVvdbl"
+      },
+      "source": [
+        "%%capture はアウトプット、出力を抑制して、画面に出さなくする。"
+      ]
     },
     {
       "cell_type": "code",
@@ -282,6 +291,81 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "J78qD7MBzrWg",
+        "outputId": "366e4107-039d-495a-eaac-8b9df60f23a4"
+      },
+      "source": [
+        "%%script clisp\n",
+        "(+ 1 2 3 4 5)"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "        i\n",
+            ". i i i I i i i i     ooooo    o        ooooooo   ooooo   ooooo\n",
+            "I I I I I I I I I    8     8   8           8     8     o  8    8\n",
+            "I I  \\ `+' /  I I    8         8           8     8        8    8\n",
+            "I  \\  `-+-'  /  I    8         8           8      ooooo   8oooo\n",
+            " \\  `-__|__-'  /     8         8           8           8  8\n",
+            "  `--___|___--'      8     o   8           8     o     8  8\n",
+            "        |             ooooo    8oooooo  ooo8ooo   ooooo   8\n",
+            "--------+--------\n",
+            "\n",
+            "Welcome to GNU CLISP 2.49.60+ (2017-06-25) <http://clisp.org/>\n",
+            "\n",
+            "Copyright (c) Bruno Haible, Michael Stoll 1992, 1993\n",
+            "Copyright (c) Bruno Haible, Marcus Daniels 1994-1997\n",
+            "Copyright (c) Bruno Haible, Pierpaolo Bernardi, Sam Steingold 1998\n",
+            "Copyright (c) Bruno Haible, Sam Steingold 1999-2000\n",
+            "Copyright (c) Sam Steingold, Bruno Haible 2001-2010\n",
+            "\n",
+            "Type :h and hit Enter for context help.\n",
+            "\n",
+            "[1]> \n",
+            "15\n",
+            "Bye.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ik0aNWwh26tu"
+      },
+      "source": [
+        "%%script false\n",
+        "(defun fact  # 関数定義 関数名\n",
+        "    (n) # 引数名 型は宣言しない\n",
+        "    (if # 条件分岐\n",
+        "        (<= n 1) 1 # n が 1 以下ならば 1\n",
+        "        (* n \n",
+        "            (fact \n",
+        "                (- n 1))))) # そうでなければ n と fact(n - 1) の再帰呼び出し"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "H3nFxg8C3pet"
+      },
+      "source": [
+        "S式とはシンボル式 = Symbolic Expression 、 アトムかリスト。\n",
+        "\n",
+        "Lisp ではデータもプログラムもS式。\n"
       ]
     }
   ]
