Colaboratory を使用して作成しました

--- a/lisp01.ipynb
+++ b/lisp01.ipynb
@@ -6,7 +6,7 @@
       "name": "lisp01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP0/stXjYBBdKcr0J7dFqr8",
+      "authorship_tag": "ABX9TyOFG05wNziZ6Ak1ODln1wb8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,7 @@
         "%%capture\n",
         "!apt install clisp"
       ],
-      "execution_count": 16,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -80,7 +80,7 @@
         "(+ 2 3)\n",
         "'(hello)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,7 +128,7 @@
         "%%script clisp\n",
         "(- 100 10)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -174,7 +174,7 @@
         "%%script clisp\n",
         ":h"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -231,7 +231,7 @@
         "%%writefile fact01.lisp\n",
         "(defun fact (n) (if (<= n 1) 1 (* n (fact (- n 1)))))"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -256,7 +256,7 @@
         "(load \"fact01\")\n",
         "(fact 10)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -306,7 +306,7 @@
         "%%script clisp\n",
         "(+ 1 2 3 4 5)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -366,6 +366,64 @@
         "S式とはシンボル式 = Symbolic Expression 、 アトムかリスト。\n",
         "\n",
         "Lisp ではデータもプログラムもS式。\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "u6uboH4DzIKK",
+        "outputId": "66b5232e-e1dd-4096-8903-c54d5d42bb66",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%script clisp\n",
+        "(/ 7 2)\n",
+        "(/ 7.0 2.0)\n",
+        "(/ 7 2.0)\n",
+        "(mod 7 2)\n",
+        "(mod -7 2)"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "        i\n",
+            ". i i i I i i i i     ooooo    o        ooooooo   ooooo   ooooo\n",
+            "I I I I I I I I I    8     8   8           8     8     o  8    8\n",
+            "I I  \\ `+' /  I I    8         8           8     8        8    8\n",
+            "I  \\  `-+-'  /  I    8         8           8      ooooo   8oooo\n",
+            " \\  `-__|__-'  /     8         8           8           8  8\n",
+            "  `--___|___--'      8     o   8           8     o     8  8\n",
+            "        |             ooooo    8oooooo  ooo8ooo   ooooo   8\n",
+            "--------+--------\n",
+            "\n",
+            "Welcome to GNU CLISP 2.49.60+ (2017-06-25) <http://clisp.org/>\n",
+            "\n",
+            "Copyright (c) Bruno Haible, Michael Stoll 1992, 1993\n",
+            "Copyright (c) Bruno Haible, Marcus Daniels 1994-1997\n",
+            "Copyright (c) Bruno Haible, Pierpaolo Bernardi, Sam Steingold 1998\n",
+            "Copyright (c) Bruno Haible, Sam Steingold 1999-2000\n",
+            "Copyright (c) Sam Steingold, Bruno Haible 2001-2010\n",
+            "\n",
+            "Type :h and hit Enter for context help.\n",
+            "\n",
+            "[1]> \n",
+            "7/2\n",
+            "[2]> \n",
+            "3.5\n",
+            "[3]> \n",
+            "3.5\n",
+            "[4]> \n",
+            "1\n",
+            "[5]> \n",
+            "1\n",
+            "Bye.\n"
+          ],
+          "name": "stdout"
+        }
       ]
     }
   ]
