--- a/lisp01.ipynb
+++ b/lisp01.ipynb
@@ -6,7 +6,7 @@
       "name": "lisp01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOFG05wNziZ6Ak1ODln1wb8",
+      "authorship_tag": "ABX9TyMjutfqobJ8XWfOEyPo9wyf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,10 @@
       "source": [
         "# メモ\n",
         "\n",
-        "Colab でLisp/Scheme を学んでみよう、というアイデア。\n"
+        "Colab でLisp/Scheme を学んでみよう、というアイデア。\n",
+        "\n",
+        "テキスト:   \n",
+        "Practical Common Lisp http://www.gigamonkeys.com/book/"
       ]
     },
     {
@@ -42,7 +45,22 @@
         "id": "ukvf7ZxNps7o"
       },
       "source": [
-        "# clisp のインストール"
+        "# Lisp のインストール"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "C6tYDKwL6TjH"
+      },
+      "source": [
+        "Colab の環境でインストールして使える処理系として sbcl と clisp を確認した。\n",
+        "\n",
+        "ここでは sbcl にしようと思う。\n",
+        "\n",
+        "インストールしたものはは消えてしまうので、毎回インストールする。\n",
+        "\n",
+        "消えているかどうかは、`sbcl --version` で確認できるが、消えていなければインストールがすぐ終わるので、毎回インストールでかまわない。"
       ]
     },
     {
@@ -52,9 +70,9 @@
       },
       "source": [
         "%%capture\n",
-        "!apt install clisp"
+        "!apt install sbcl"
       ],
-      "execution_count": 2,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -63,7 +81,7 @@
         "id": "4GArhfBVvdbl"
       },
       "source": [
-        "%%capture はアウトプット、出力を抑制して、画面に出さなくする。"
+        "%%capture はアウトプット、出力を抑制して、画面に出さなくするもの。"
       ]
     },
     {
@@ -73,43 +91,30 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mwJgXRokm1Wd",
-        "outputId": "f5da29b0-d369-4062-8099-7ef39303a94d"
+        "outputId": "ea644e67-a18a-4f72-c3aa-bb9463c584d8"
       },
       "source": [
-        "%%script clisp\n",
+        "%%script sbcl\n",
         "(+ 2 3)\n",
         "'(hello)"
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "        i\n",
-            ". i i i I i i i i     ooooo    o        ooooooo   ooooo   ooooo\n",
-            "I I I I I I I I I    8     8   8           8     8     o  8    8\n",
-            "I I  \\ `+' /  I I    8         8           8     8        8    8\n",
-            "I  \\  `-+-'  /  I    8         8           8      ooooo   8oooo\n",
-            " \\  `-__|__-'  /     8         8           8           8  8\n",
-            "  `--___|___--'      8     o   8           8     o     8  8\n",
-            "        |             ooooo    8oooooo  ooo8ooo   ooooo   8\n",
-            "--------+--------\n",
+            "This is SBCL 1.4.5.debian, an implementation of ANSI Common Lisp.\n",
+            "More information about SBCL is available at <http://www.sbcl.org/>.\n",
             "\n",
-            "Welcome to GNU CLISP 2.49.60+ (2017-06-25) <http://clisp.org/>\n",
-            "\n",
-            "Copyright (c) Bruno Haible, Michael Stoll 1992, 1993\n",
-            "Copyright (c) Bruno Haible, Marcus Daniels 1994-1997\n",
-            "Copyright (c) Bruno Haible, Pierpaolo Bernardi, Sam Steingold 1998\n",
-            "Copyright (c) Bruno Haible, Sam Steingold 1999-2000\n",
-            "Copyright (c) Sam Steingold, Bruno Haible 2001-2010\n",
-            "\n",
-            "Type :h and hit Enter for context help.\n",
-            "\n",
-            "[1]> \n",
+            "SBCL is free software, provided as is, with absolutely no warranty.\n",
+            "It is mostly in the public domain; some portions are provided under\n",
+            "BSD-style licenses.  See the CREDITS and COPYING files in the\n",
+            "distribution for more information.\n",
+            "* \n",
             "5\n",
-            "[2]> \n",
+            "* \n",
             "(HELLO)\n",
-            "Bye.\n"
+            "* "
           ],
           "name": "stdout"
         }
@@ -122,88 +127,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wFK3swsXnBq-",
-        "outputId": "4c418c1b-3040-48ee-c93d-9a079d1086b5"
+        "outputId": "66a6ad8c-3a1f-40e8-bd0d-18c01fb0d46d"
       },
       "source": [
-        "%%script clisp\n",
-        "(- 100 10)"
+        "%%script sbcl\n",
+        "(- 100 10 1)"
       ],
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "        i\n",
-            ". i i i I i i i i     ooooo    o        ooooooo   ooooo   ooooo\n",
-            "I I I I I I I I I    8     8   8           8     8     o  8    8\n",
-            "I I  \\ `+' /  I I    8         8           8     8        8    8\n",
-            "I  \\  `-+-'  /  I    8         8           8      ooooo   8oooo\n",
-            " \\  `-__|__-'  /     8         8           8           8  8\n",
-            "  `--___|___--'      8     o   8           8     o     8  8\n",
-            "        |             ooooo    8oooooo  ooo8ooo   ooooo   8\n",
-            "--------+--------\n",
+            "This is SBCL 1.4.5.debian, an implementation of ANSI Common Lisp.\n",
+            "More information about SBCL is available at <http://www.sbcl.org/>.\n",
             "\n",
-            "Welcome to GNU CLISP 2.49.60+ (2017-06-25) <http://clisp.org/>\n",
-            "\n",
-            "Copyright (c) Bruno Haible, Michael Stoll 1992, 1993\n",
-            "Copyright (c) Bruno Haible, Marcus Daniels 1994-1997\n",
-            "Copyright (c) Bruno Haible, Pierpaolo Bernardi, Sam Steingold 1998\n",
-            "Copyright (c) Bruno Haible, Sam Steingold 1999-2000\n",
-            "Copyright (c) Sam Steingold, Bruno Haible 2001-2010\n",
-            "\n",
-            "Type :h and hit Enter for context help.\n",
-            "\n",
-            "[1]> \n",
-            "90\n",
-            "Bye.\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "wrCe1jADr6sX",
-        "outputId": "6370bb23-fbf5-4494-f89f-163579e03cae"
-      },
-      "source": [
-        "%%script clisp\n",
-        ":h"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "        i\n",
-            ". i i i I i i i i     ooooo    o        ooooooo   ooooo   ooooo\n",
-            "I I I I I I I I I    8     8   8           8     8     o  8    8\n",
-            "I I  \\ `+' /  I I    8         8           8     8        8    8\n",
-            "I  \\  `-+-'  /  I    8         8           8      ooooo   8oooo\n",
-            " \\  `-__|__-'  /     8         8           8           8  8\n",
-            "  `--___|___--'      8     o   8           8     o     8  8\n",
-            "        |             ooooo    8oooooo  ooo8ooo   ooooo   8\n",
-            "--------+--------\n",
-            "\n",
-            "Welcome to GNU CLISP 2.49.60+ (2017-06-25) <http://clisp.org/>\n",
-            "\n",
-            "Copyright (c) Bruno Haible, Michael Stoll 1992, 1993\n",
-            "Copyright (c) Bruno Haible, Marcus Daniels 1994-1997\n",
-            "Copyright (c) Bruno Haible, Pierpaolo Bernardi, Sam Steingold 1998\n",
-            "Copyright (c) Bruno Haible, Sam Steingold 1999-2000\n",
-            "Copyright (c) Sam Steingold, Bruno Haible 2001-2010\n",
-            "\n",
-            "Type :h and hit Enter for context help.\n",
-            "\n",
-            "[1]> You are in the top-level Read-Eval-Print loop.\n",
-            "Help (abbreviated :h) = this list\n",
-            "Use the usual editing capabilities.\n",
-            "(quit) or (exit) leaves CLISP.\n",
-            "Bye.\n"
+            "SBCL is free software, provided as is, with absolutely no warranty.\n",
+            "It is mostly in the public domain; some portions are provided under\n",
+            "BSD-style licenses.  See the CREDITS and COPYING files in the\n",
+            "distribution for more information.\n",
+            "* \n",
+            "89\n",
+            "* "
           ],
           "name": "stdout"
         }
@@ -215,7 +159,7 @@
         "id": "0RI8GEZYsPpZ"
       },
       "source": [
-        "うむむ、毎回 repl が立ち上がって終了するのはやっかいだな。 ま、とりあえず進もう。"
+        "うむむ、毎回 repl が立ち上がって終了するのはやっかいだが、とりあえず進もう。"
       ]
     },
     {
@@ -225,18 +169,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0egHkuX8shrv",
-        "outputId": "5e542a20-0543-45d5-b157-86bfaf8a8a2f"
+        "outputId": "de646dee-793c-47ad-a326-d1603c872194"
       },
       "source": [
         "%%writefile fact01.lisp\n",
         "(defun fact (n) (if (<= n 1) 1 (* n (fact (- n 1)))))"
       ],
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Overwriting fact01.lisp\n"
+            "Writing fact01.lisp\n"
           ],
           "name": "stdout"
         }
@@ -249,45 +193,30 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uNC3CZjRs5Oo",
-        "outputId": "6024dfd3-0748-4d6c-f0fd-873810a76b2d"
+        "outputId": "fc6e3570-6478-40ce-9fbd-f2a4c9816a17"
       },
       "source": [
-        "%%script clisp\n",
+        "%%script sbcl\n",
         "(load \"fact01\")\n",
         "(fact 10)"
       ],
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "        i\n",
-            ". i i i I i i i i     ooooo    o        ooooooo   ooooo   ooooo\n",
-            "I I I I I I I I I    8     8   8           8     8     o  8    8\n",
-            "I I  \\ `+' /  I I    8         8           8     8        8    8\n",
-            "I  \\  `-+-'  /  I    8         8           8      ooooo   8oooo\n",
-            " \\  `-__|__-'  /     8         8           8           8  8\n",
-            "  `--___|___--'      8     o   8           8     o     8  8\n",
-            "        |             ooooo    8oooooo  ooo8ooo   ooooo   8\n",
-            "--------+--------\n",
+            "This is SBCL 1.4.5.debian, an implementation of ANSI Common Lisp.\n",
+            "More information about SBCL is available at <http://www.sbcl.org/>.\n",
             "\n",
-            "Welcome to GNU CLISP 2.49.60+ (2017-06-25) <http://clisp.org/>\n",
-            "\n",
-            "Copyright (c) Bruno Haible, Michael Stoll 1992, 1993\n",
-            "Copyright (c) Bruno Haible, Marcus Daniels 1994-1997\n",
-            "Copyright (c) Bruno Haible, Pierpaolo Bernardi, Sam Steingold 1998\n",
-            "Copyright (c) Bruno Haible, Sam Steingold 1999-2000\n",
-            "Copyright (c) Sam Steingold, Bruno Haible 2001-2010\n",
-            "\n",
-            "Type :h and hit Enter for context help.\n",
-            "\n",
-            "[1]> \n",
-            ";; Loading file /content/fact01.lisp ...\n",
-            ";; Loaded file /content/fact01.lisp\n",
-            "#P\"/content/fact01.lisp\"\n",
-            "[2]> \n",
+            "SBCL is free software, provided as is, with absolutely no warranty.\n",
+            "It is mostly in the public domain; some portions are provided under\n",
+            "BSD-style licenses.  See the CREDITS and COPYING files in the\n",
+            "distribution for more information.\n",
+            "* \n",
+            "T\n",
+            "* \n",
             "3628800\n",
-            "Bye.\n"
+            "* "
           ],
           "name": "stdout"
         }
@@ -300,40 +229,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "J78qD7MBzrWg",
-        "outputId": "366e4107-039d-495a-eaac-8b9df60f23a4"
+        "outputId": "1a02ab52-cf13-4663-bed3-8f46e1419c3f"
       },
       "source": [
-        "%%script clisp\n",
+        "%%script sbcl\n",
         "(+ 1 2 3 4 5)"
       ],
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "        i\n",
-            ". i i i I i i i i     ooooo    o        ooooooo   ooooo   ooooo\n",
-            "I I I I I I I I I    8     8   8           8     8     o  8    8\n",
-            "I I  \\ `+' /  I I    8         8           8     8        8    8\n",
-            "I  \\  `-+-'  /  I    8         8           8      ooooo   8oooo\n",
-            " \\  `-__|__-'  /     8         8           8           8  8\n",
-            "  `--___|___--'      8     o   8           8     o     8  8\n",
-            "        |             ooooo    8oooooo  ooo8ooo   ooooo   8\n",
-            "--------+--------\n",
+            "This is SBCL 1.4.5.debian, an implementation of ANSI Common Lisp.\n",
+            "More information about SBCL is available at <http://www.sbcl.org/>.\n",
             "\n",
-            "Welcome to GNU CLISP 2.49.60+ (2017-06-25) <http://clisp.org/>\n",
-            "\n",
-            "Copyright (c) Bruno Haible, Michael Stoll 1992, 1993\n",
-            "Copyright (c) Bruno Haible, Marcus Daniels 1994-1997\n",
-            "Copyright (c) Bruno Haible, Pierpaolo Bernardi, Sam Steingold 1998\n",
-            "Copyright (c) Bruno Haible, Sam Steingold 1999-2000\n",
-            "Copyright (c) Sam Steingold, Bruno Haible 2001-2010\n",
-            "\n",
-            "Type :h and hit Enter for context help.\n",
-            "\n",
-            "[1]> \n",
+            "SBCL is free software, provided as is, with absolutely no warranty.\n",
+            "It is mostly in the public domain; some portions are provided under\n",
+            "BSD-style licenses.  See the CREDITS and COPYING files in the\n",
+            "distribution for more information.\n",
+            "* \n",
             "15\n",
-            "Bye.\n"
+            "* "
           ],
           "name": "stdout"
         }
@@ -372,58 +288,54 @@
       "cell_type": "code",
       "metadata": {
         "id": "u6uboH4DzIKK",
-        "outputId": "66b5232e-e1dd-4096-8903-c54d5d42bb66",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f2d1d221-49cb-4795-f990-00328d45fc0a"
       },
       "source": [
-        "%%script clisp\n",
+        "%%script sbcl\n",
         "(/ 7 2)\n",
         "(/ 7.0 2.0)\n",
         "(/ 7 2.0)\n",
         "(mod 7 2)\n",
         "(mod -7 2)"
       ],
-      "execution_count": 10,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "        i\n",
-            ". i i i I i i i i     ooooo    o        ooooooo   ooooo   ooooo\n",
-            "I I I I I I I I I    8     8   8           8     8     o  8    8\n",
-            "I I  \\ `+' /  I I    8         8           8     8        8    8\n",
-            "I  \\  `-+-'  /  I    8         8           8      ooooo   8oooo\n",
-            " \\  `-__|__-'  /     8         8           8           8  8\n",
-            "  `--___|___--'      8     o   8           8     o     8  8\n",
-            "        |             ooooo    8oooooo  ooo8ooo   ooooo   8\n",
-            "--------+--------\n",
+            "This is SBCL 1.4.5.debian, an implementation of ANSI Common Lisp.\n",
+            "More information about SBCL is available at <http://www.sbcl.org/>.\n",
             "\n",
-            "Welcome to GNU CLISP 2.49.60+ (2017-06-25) <http://clisp.org/>\n",
-            "\n",
-            "Copyright (c) Bruno Haible, Michael Stoll 1992, 1993\n",
-            "Copyright (c) Bruno Haible, Marcus Daniels 1994-1997\n",
-            "Copyright (c) Bruno Haible, Pierpaolo Bernardi, Sam Steingold 1998\n",
-            "Copyright (c) Bruno Haible, Sam Steingold 1999-2000\n",
-            "Copyright (c) Sam Steingold, Bruno Haible 2001-2010\n",
-            "\n",
-            "Type :h and hit Enter for context help.\n",
-            "\n",
-            "[1]> \n",
+            "SBCL is free software, provided as is, with absolutely no warranty.\n",
+            "It is mostly in the public domain; some portions are provided under\n",
+            "BSD-style licenses.  See the CREDITS and COPYING files in the\n",
+            "distribution for more information.\n",
+            "* \n",
             "7/2\n",
-            "[2]> \n",
+            "* \n",
             "3.5\n",
-            "[3]> \n",
+            "* \n",
             "3.5\n",
-            "[4]> \n",
+            "* \n",
             "1\n",
-            "[5]> \n",
+            "* \n",
             "1\n",
-            "Bye.\n"
+            "* "
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wpms7DUXBiiy"
+      },
+      "source": [
+        "# いまここ"
       ]
     }
   ]
