Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO1HXewil1YLuQftDz3DTM1",
+      "authorship_tag": "ABX9TyNppSTAEH7/Z0csDXca4Z8a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6525,6 +6525,97 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "rMANLnVl8n2h",
+        "outputId": "e01a8fa1-d37c-4419-dce7-a98905093d32",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile exception05.cpp\n",
+        "#include <iostream>\n",
+        "#include <string>\n",
+        "\n",
+        "int CharToInt(const char c) {\n",
+        "    switch (c) {\n",
+        "        case '0':  return 0;\n",
+        "        case '1':  return 1;\n",
+        "        case '2':  return 2;\n",
+        "        case '3':  return 3;\n",
+        "        case '4':  return 4;\n",
+        "        case '5':  return 5;\n",
+        "        case '6':  return 6;\n",
+        "        case '7':  return 7;\n",
+        "        case '8':  return 8;\n",
+        "        case '9':  return 9;\n",
+        "        default:\n",
+        "            // 関数から例外を送出\n",
+        "            throw std::runtime_error(\"数値ではない文字が入っています\");\n",
+        "    }\n",
+        "}\n",
+        "\n",
+        "int StringToInt(const std::string& str) {\n",
+        "    int num = 0;\n",
+        "    for (const auto s : str) {\n",
+        "        num *= 10;\n",
+        "\n",
+        "        // CharToInt から例外が送出される\n",
+        "        num += CharToInt(s);\n",
+        "    }\n",
+        "    return num;\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "    std::string str = \"123XY56\";\n",
+        "    try {\n",
+        "        // StringToInt 内部の CharToInt から例外が送出される\n",
+        "        auto num = StringToInt(str);\n",
+        "\n",
+        "        std::cout << num << std::endl;\n",
+        "    } catch (const std::runtime_error& e) {\n",
+        "        std::cout << e.what() << std::endl;\n",
+        "    }\n",
+        "\n",
+        "    return 0;\n",
+        "}"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing exception05.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HesdtoSI8nSh",
+        "outputId": "cd464028-94de-49f2-cf81-bea1a79dfdf5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ exception05.cpp -o exception05; ./exception05"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "数値ではない文字が入っています\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
@@ -11023,10 +11114,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "v6NkGfdANLn7",
-        "outputId": "8bda7e41-b365-4e1e-a3ed-367a505dbc10",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8bda7e41-b365-4e1e-a3ed-367a505dbc10"
       },
       "source": [
         "%%writefile prefixincrement.cpp\n",
@@ -11057,7 +11148,7 @@
         "    std::cout << b.Value() << std::endl;  // 3\n",
         "}"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11072,15 +11163,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "itU86hHZNMtr",
-        "outputId": "2c51fddf-aac5-488f-81ec-bab7925959d9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2c51fddf-aac5-488f-81ec-bab7925959d9"
       },
       "source": [
         "!g++ prefixincrement.cpp -o prefixincrement; ./prefixincrement"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11096,10 +11187,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "LE1ckRhTQ2r3",
-        "outputId": "a5f40447-b1c1-4cfa-a215-f4e5b0603350",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a5f40447-b1c1-4cfa-a215-f4e5b0603350"
       },
       "source": [
         "%%writefile postfixincrement.cpp\n",
@@ -11130,7 +11221,7 @@
         "    std::cout << b.Value() << std::endl;  // 2\n",
         "}"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11145,15 +11236,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "S1-9KxlOQ2aE",
-        "outputId": "65cdecad-1a0e-48bf-931a-ab7c28a5ed7f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "65cdecad-1a0e-48bf-931a-ab7c28a5ed7f"
       },
       "source": [
         "!g++ postfixincrement.cpp -o postfixincrement; ./postfixincrement"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11168,10 +11259,308 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "-VQnOEri3H_R"
+      },
+      "source": [
+        "# 関数テンプレート"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Orwyx-dx5OR0"
+      },
+      "source": [
+        "型やコンパイル時に定まる値をパラメータ化する機能。 型に依存せず処理を共通化するために使用される。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vnEUk5sG5UlU",
+        "outputId": "094dd4d2-f08c-41b3-e063-ea78586e0764",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile template01.cpp\n",
+        "#include <iostream>\n",
+        "template <typename T>\n",
+        "T Sum(T a, T b) {\n",
+        "    return a + b;\n",
+        "}\n",
+        "int main(){\n",
+        "    std::cout << Sum<int>(1, 2)  << std::endl;         // 3\n",
+        "    std::cout << Sum<double>(1.2, 3.4)  << std::endl;  // 4.6\n",
+        "}\n"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting template01.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Kxoo0Fyv5VDX",
+        "outputId": "c276a223-b4e3-4e96-cb43-47b643d79f55",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ template01.cpp -o template01; ./template01"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3\n",
+            "4.6\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5SmWlDsj654F"
+      },
+      "source": [
+        "# クラステンプレート"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s47KvId16-KS",
+        "outputId": "8957ce55-6e2c-47fa-83c1-0ffd8eccb29a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile template02.cpp\n",
+        "#include <iostream>\n",
+        "template <typename T>\n",
+        "class Rectangle {\n",
+        " public:\n",
+        "    Rectangle(T height, T width) : height_(height), width_(width) {}\n",
+        "\n",
+        "    T Area() const {\n",
+        "       return height_ * width_;\n",
+        "    }\n",
+        "\n",
+        " private:\n",
+        "    const T height_;\n",
+        "    const T width_;\n",
+        "};\n",
+        "int main(){\n",
+        "    Rectangle<int> r1(10, 20);\n",
+        "    Rectangle<double> r2(1.2, 3.4);\n",
+        "    std::cout << r1.Area() << \"\\n\";  // 200\n",
+        "    std::cout << r2.Area() << \"\\n\";  // 4.08\n",
+        "}"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing template02.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "L7EcjG2n698I",
+        "outputId": "e23d3caf-779f-4369-efe0-db6f1c4417f0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ template02.cpp -o template02; ./template02"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "200\n",
+            "4.08\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "U7AbLDO09J6L"
+      },
+      "source": [
+        "# アサーション"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eWh8xJ029MCL",
+        "outputId": "25c25518-04b4-4b07-fe1e-b81b3b8aa788",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile assertion.cpp\n",
+        "#include <cassert>\n",
+        "#include <iostream>\n",
+        "#include <limits>\n",
+        "#include <vector>\n",
+        "\n",
+        "int Max(const std::vector<int>& v) {\n",
+        "    assert(!v.empty());\n",
+        "\n",
+        "    int max = std::numeric_limits<int>::min();\n",
+        "    for (auto e : v) {\n",
+        "        if (e > max) {\n",
+        "            max = e;\n",
+        "        }\n",
+        "    }\n",
+        "    return max;\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "    std::vector<int> v1 = {1, 2, 3, 4, 5};\n",
+        "    std::vector<int> v2;\n",
+        "\n",
+        "    std::cout << Max(v1) << std::endl;\n",
+        "    std::cout << Max(v2) << std::endl;\n",
+        "\n",
+        "    return 0;\n",
+        "}"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing assertion.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kzA4HO649Mtv",
+        "outputId": "8d4a970e-5184-4306-b8b8-64f19680cea4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ assertion.cpp -o assertion; ./assertion"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5\n",
+            "assertion: assertion.cpp:7: int Max(const std::vector<int>&): Assertion `!v.empty()' failed.\n",
+            "/bin/bash: line 1:   205 Aborted                 (core dumped) ./assertion\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3MXY1ge89rBI",
+        "outputId": "99488842-913b-4cc1-95bf-092eb1c17627",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile staticassert.cpp\n",
+        "template <typename T, int N>\n",
+        "class Array {\n",
+        "    static_assert(N > 0, \"サイズは0より大きくなければなりません\");\n",
+        "\n",
+        " public:\n",
+        "    int size() const { return N; }\n",
+        "\n",
+        "    T data_[N];  // サイズ 0 の配列はコンパイルエラーにならない\n",
+        "};\n",
+        "\n",
+        "int main() {\n",
+        "    Array<int, 0> a;\n",
+        "    return 0;\n",
+        "}"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing staticassert.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GAzhwbn49qyf",
+        "outputId": "4b67dd92-ed6a-4226-b31e-4b226fc4f6eb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ staticassert.cpp -o staticassert; ./staticassert"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "staticassert.cpp: In instantiation of ‘\u001b[01m\u001b[Kclass Array<int, 0>\u001b[m\u001b[K’:\n",
+            "\u001b[01m\u001b[Kstaticassert.cpp:12:19:\u001b[m\u001b[K   required from here\n",
+            "\u001b[01m\u001b[Kstaticassert.cpp:3:5:\u001b[m\u001b[K \u001b[01;31m\u001b[Kerror: \u001b[m\u001b[Kstatic assertion failed: サイズは0より大きくなければなりません\n",
+            "     \u001b[01;31m\u001b[Kstatic_assert\u001b[m\u001b[K(N > 0, \"サイズは0より大きくなければなりません\");\n",
+            "     \u001b[01;31m\u001b[K^~~~~~~~~~~~~\u001b[m\u001b[K\n",
+            "/bin/bash: ./staticassert: No such file or directory\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "yq4GK6uqsCrK"
       },
       "source": [
-        "# 続きは learncpp02.ipynb"
+        "# いまここ"
       ]
     }
   ]
