Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNppSTAEH7/Z0csDXca4Z8a",
+      "authorship_tag": "ABX9TyNbHAEdhX8iMu82SvIOMhhR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6526,10 +6526,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "rMANLnVl8n2h",
-        "outputId": "e01a8fa1-d37c-4419-dce7-a98905093d32",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e01a8fa1-d37c-4419-dce7-a98905093d32"
       },
       "source": [
         "%%writefile exception05.cpp\n",
@@ -6579,7 +6579,7 @@
         "    return 0;\n",
         "}"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6594,15 +6594,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "HesdtoSI8nSh",
-        "outputId": "cd464028-94de-49f2-cf81-bea1a79dfdf5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cd464028-94de-49f2-cf81-bea1a79dfdf5"
       },
       "source": [
         "!g++ exception05.cpp -o exception05; ./exception05"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11278,10 +11278,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "vnEUk5sG5UlU",
-        "outputId": "094dd4d2-f08c-41b3-e063-ea78586e0764",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "094dd4d2-f08c-41b3-e063-ea78586e0764"
       },
       "source": [
         "%%writefile template01.cpp\n",
@@ -11295,7 +11295,7 @@
         "    std::cout << Sum<double>(1.2, 3.4)  << std::endl;  // 4.6\n",
         "}\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11310,15 +11310,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "Kxoo0Fyv5VDX",
-        "outputId": "c276a223-b4e3-4e96-cb43-47b643d79f55",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c276a223-b4e3-4e96-cb43-47b643d79f55"
       },
       "source": [
         "!g++ template01.cpp -o template01; ./template01"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11343,10 +11343,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "s47KvId16-KS",
-        "outputId": "8957ce55-6e2c-47fa-83c1-0ffd8eccb29a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8957ce55-6e2c-47fa-83c1-0ffd8eccb29a"
       },
       "source": [
         "%%writefile template02.cpp\n",
@@ -11371,7 +11371,7 @@
         "    std::cout << r2.Area() << \"\\n\";  // 4.08\n",
         "}"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11386,15 +11386,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "L7EcjG2n698I",
-        "outputId": "e23d3caf-779f-4369-efe0-db6f1c4417f0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e23d3caf-779f-4369-efe0-db6f1c4417f0"
       },
       "source": [
         "!g++ template02.cpp -o template02; ./template02"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11419,10 +11419,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "eWh8xJ029MCL",
-        "outputId": "25c25518-04b4-4b07-fe1e-b81b3b8aa788",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "25c25518-04b4-4b07-fe1e-b81b3b8aa788"
       },
       "source": [
         "%%writefile assertion.cpp\n",
@@ -11453,7 +11453,7 @@
         "    return 0;\n",
         "}"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11468,15 +11468,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "kzA4HO649Mtv",
-        "outputId": "8d4a970e-5184-4306-b8b8-64f19680cea4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8d4a970e-5184-4306-b8b8-64f19680cea4"
       },
       "source": [
         "!g++ assertion.cpp -o assertion; ./assertion"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11493,13 +11493,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "3MXY1ge89rBI",
-        "outputId": "99488842-913b-4cc1-95bf-092eb1c17627",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c70e9dfb-1a50-4b43-c1a7-f9901779e62f"
       },
       "source": [
         "%%writefile staticassert.cpp\n",
+        "#include <cassert>\n",
+        "\n",
         "template <typename T, int N>\n",
         "class Array {\n",
         "    static_assert(N > 0, \"サイズは0より大きくなければなりません\");\n",
@@ -11515,7 +11517,7 @@
         "    return 0;\n",
         "}"
       ],
-      "execution_count": 11,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -11530,22 +11532,22 @@
       "cell_type": "code",
       "metadata": {
         "id": "GAzhwbn49qyf",
-        "outputId": "4b67dd92-ed6a-4226-b31e-4b226fc4f6eb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f40ed370-8a2e-4788-a804-26bea6d5a935"
       },
       "source": [
         "!g++ staticassert.cpp -o staticassert; ./staticassert"
       ],
-      "execution_count": 12,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "staticassert.cpp: In instantiation of ‘\u001b[01m\u001b[Kclass Array<int, 0>\u001b[m\u001b[K’:\n",
-            "\u001b[01m\u001b[Kstaticassert.cpp:12:19:\u001b[m\u001b[K   required from here\n",
-            "\u001b[01m\u001b[Kstaticassert.cpp:3:5:\u001b[m\u001b[K \u001b[01;31m\u001b[Kerror: \u001b[m\u001b[Kstatic assertion failed: サイズは0より大きくなければなりません\n",
+            "\u001b[01m\u001b[Kstaticassert.cpp:14:19:\u001b[m\u001b[K   required from here\n",
+            "\u001b[01m\u001b[Kstaticassert.cpp:5:5:\u001b[m\u001b[K \u001b[01;31m\u001b[Kerror: \u001b[m\u001b[Kstatic assertion failed: サイズは0より大きくなければなりません\n",
             "     \u001b[01;31m\u001b[Kstatic_assert\u001b[m\u001b[K(N > 0, \"サイズは0より大きくなければなりません\");\n",
             "     \u001b[01;31m\u001b[K^~~~~~~~~~~~~\u001b[m\u001b[K\n",
             "/bin/bash: ./staticassert: No such file or directory\n"
